# jyhwang0631

./: .gitmodules  Atmega128_Project.elf  Atmega128_Project.hex  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  cmake사용법.md  compile_commands.json
c_example/: bigletter.c  celsius2Fahr  compare  compare.c  compare2.c  fahr2Celcius  genderRatio  genderRatio.c  increment.c  literal.c  oddCopy  oddEven  sizeof.c  stringCopy  stringCopy.c  triangle2  triangle2.c
c_example/part1/: alphabet  alphabet.c  bigletter  celsius2Fahr.c  charNumber  charNumber.c  fahr2Celcius.c  fourbit  fourbit.c  fourbit2  fourbit2.c  hello  limit  limit.c  oddEven.c  sizeof  triangle  triangle.c
c_example/part2/: AZ  AZ.c  Makefile  a2bsum  a2bsum.c  absolutevalue  absolutevalue.c  array  array.c  dice  dice.c  dice2  dice2.c  findmax  findmax.c  lotto  lotto.c  multiply  multiply.c  one2Tenwhile  one2Tenwhile.c  one2tensum  one2tensum.c  one2tensumwhile  one2tensumwhile.c  oneToTenFor  oneToTenFor.c  passFail  passFail.c  passFail2  passFail2.c  posZeroNeg  posZeroNeg.c  scoreGrade  scoreGrade.c  scoreGradeSwitch  scoreGradeSwitch.c  star.c  star2  star2.c  (+6 more)
c_example/part3/: CMakeLists.txt  arrayassignment.c  arraycompare  arraycompare.c  bubblesorting  bubblesorting.c  loaclVariable  loaclVariable.c  pointer1  pointer1.c  pointer2  pointer2.c  pointer3.c  pointer5functionpointer  pointer5functionpointer.c  pointer6  pointer6.c  pointerandarray.c  pointerandarray2  pointerandarray2.c  qsort  qsort.c  selectionSorting  selectionSorting.c  swap  swap.c
(+11 files in other folders)
